--- a/css/main.css
+++ b/css/main.css
@@ -1,64 +1,67 @@
 body {
-    background-color: #1c1c1c;
-    color: #ccc;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	background-color: #1c1c1c;
+	color: #ccc;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-body, input, textarea {
-    font-size: 12px;
-    font-family: monospace;
+body,
+input,
+textarea {
+	font-size: 12px;
+	font-family: monospace;
 }
 .main {
-    width: 300px;
-    padding: 26px;
-    border: 1px solid #333;
-    border-radius: 10px;
-    background-color: #252525;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+	width: 300px;
+	padding: 26px;
+	border: 1px solid #333;
+	border-radius: 10px;
+	background-color: #252525;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
-input, textarea {
-    padding: 5px;
-    background-color: #222;
-    border: 1px solid #333;
-    border-radius: 3px;
-    color: #ccc;
-    width: 100%;
-    &:focus {
-        color: #fff;
-    }
+input,
+textarea {
+	padding: 5px;
+	background-color: #222;
+	border: 1px solid #333;
+	border-radius: 3px;
+	color: #ccc;
+	width: 100%;
+	&:focus {
+		color: #fff;
+	}
 }
 textarea {
-    resize: none;
-    height: 92px;
+	resize: none;
+	height: 92px;
 }
 .buttons {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    button {
-        height: 26px;
-        background-color: #234;
-        border: 1px solid #345;
-        color: #fff;
-        border-radius: 5px;
-        padding: 0px 8px;
-        cursor: pointer;
-    }
+	display: flex;
+	justify-content: flex-end;
+	gap: 10px;
+	button {
+		height: 26px;
+		background-color: #234;
+		border: 1px solid #345;
+		color: #fff;
+		border-radius: 5px;
+		padding: 0px 8px;
+		cursor: pointer;
+	}
 }
 #qrContainer {
-    display: flex;
-    justify-content: center;
-    background-color: #444;
-    border-radius: 3px;
-    border: 1px solid #666
+	display: flex;
+	justify-content: center;
+	background-color: #444;
+	border-radius: 3px;
+	border: 1px solid #666;
 }
 #qr {
-    padding: 10px;
-    background-color: #fff;
+	padding: 10px;
+	background-color: #fff;
 }
 .hidden {
-    display: none !important;
+	display: none !important;
 }
